--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
-
-Maurice Kyalo
+# This project was contribute by these people
+1. Listowel Adolwin   <mrckyalo@gmail.com>
+2. Emmanuel Ufuoma    <tkelemu165@gmail.com>
