--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This project was contribute by these people
-1. Listowel Adolwin   <mrckyalo@gmail.com>
-2. Emmanuel Ufuoma    <tkelemu165@gmail.com>
+1. Maurice Okeke   <mrckyalo@gmail.com>
+2. Kelemu Assefa    <tkelemu165@gmail.com>
